# content-moderation.ai

./: .gitattributes  .gitignore  README.md  app.py  convert_datasets.py  dataset.py  evaluate.py  onnx_export.py  prepare_data.py  pyproject.toml  run_pipeline.sh  test_api.py  test_data_pipeline.py  train.py  trainer.py
outputs/: model_optimized.onnx
outputs/evaluation/: classification_report.txt  error_analysis.csv  metrics.json
